# Jiraso-reloaded

./: .gitignore  LICENSE  README.md  SMOKE_CHECKLIST.md  config.toml.example  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-21-plan-1-foundation.md  2026-04-23-plan-2-stammdaten-import.md  2026-04-27-plan-3-bewertung.md
docs/superpowers/specs/: 2026-04-21-jiraso-reloaded-design.md  2026-04-27-plan-3-bewertung-design.md
import-vorlagen/: README.md  asv-export-template.md
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: auth.rs  backup.rs  bemerkung.rs  bewertung.rs  bug_report.rs  commands.rs  config.rs  db.rs  error.rs  goodies.rs  import.rs  katalog.rs  legacy_import.rs  lib.rs  lock.rs  main.rs  stammdaten.rs  uebersicht.rs
src-tauri/src/migrations/: 001_initial.sql  002_schuljahr_aktiv.sql  003_bewertung_pk.sql  004_editor_kuerzel.sql
src/lib/: BugButton.svelte  Celebration.svelte  api.ts  celebration.svelte.ts  kuerzel.svelte.ts  session.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/admin/katalog/: +page.svelte
src/routes/admin/legacy-import/: +page.svelte
src/routes/admin/stammdaten/: +page.svelte
src/routes/bewertung/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/druck/: +page.svelte
src/routes/hilfe/: +page.svelte
src/routes/login/: +page.svelte
src/routes/setup/: +page.svelte
src/routes/uebersicht/: +page.svelte
src/routes/uebersicht/[schueler_id]/: +page.svelte
